testdata/bad/bad-fail-3.ct
# Command should not fail, but does.
# The failure is from the arg check in cmdtest.go.

$ cd foo bar

# We shouldn't see this output.
$ echo should not appear
